--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "vue": "^3.4.0"
     },
     "dependencies": {
+        "bootstrap-icons": "^1.11.3",
         "dayjs": "^1.11.13",
         "vue-i18n": "^9.14.0"
     }
