--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dependencies": {
         "bootstrap-icons": "^1.11.3",
         "dayjs": "^1.11.13",
-        "vue-i18n": "^9.14.0"
+        "vue-i18n": "^9.14.0",
+        "vue-slide-up-down": "^3.0.0"
     }
 }
