[update] Ziggy のパス設定を修正
Ziggy のパスが変更され、新しいディレクトリ構成に対応するため修正しました。

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,7 +3,7 @@
         "baseUrl": ".",
         "paths": {
             "@/*": ["resources/js/*"],
-            "ziggy-js": ["./vendor/tightenco/ziggy"]
+            "ziggy-js": ["./vendor/tightenco/ziggy/dist/ziggy.js"]
         }
     },
     "exclude": ["node_modules", "public"]
