--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "bootstrap-icons": "^1.11.3",
         "dayjs": "^1.11.13",
         "vue-i18n": "^9.14.0",
-        "vue-slide-up-down": "^3.0.0"
+        "vue-slide-up-down": "^3.0.0",
+        "vuedraggable": "^2.24.3"
     }
 }
