--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "dayjs": "^1.11.13",
         "vue-i18n": "^9.14.0",
         "vue-slide-up-down": "^3.0.0",
+        "vue3-smooth-dnd": "^0.0.6",
         "vuedraggable": "^2.24.3"
     }
 }
