[fix] テナント境界チェック特定メソッドハードコーディング修正
Copilotレビューに従い、特定テストメソッド名のハードコーディングを削除し、SecurityFunctionTestクラス全体実行に変更しました。保守性とメンテナンス性が向上しました。

--- a/lefthook.yml
+++ b/lefthook.yml
@@ -49,7 +49,7 @@ pre-push:
 
     # テナント境界チェック専用テスト
     tenant-boundary-check:
-      run: ./vendor/bin/sail test tests/Unit/SecurityFunctionTest.php::test_tenant_violation_exception_detailed_context --stop-on-failure
+      run: ./vendor/bin/sail test tests/Unit/SecurityFunctionTest.php --stop-on-failure
       fail_text: "テナント境界チェックに失敗しました。セキュリティ問題を修正してください。"
 
     # フロントエンドビルドテスト
