--- a/.env.testing
+++ b/.env.testing
@@ -16,12 +16,8 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=mysql
-DB_PORT=3306
-DB_DATABASE=communicare_test
-DB_USERNAME=sail
-DB_PASSWORD=password
+DB_CONNECTION=sqlite
+DB_DATABASE=:memory:
 
 SESSION_DRIVER=array
 SESSION_LIFETIME=120
