--- a/.env.testing
+++ b/.env.testing
@@ -41,8 +41,5 @@ MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
-TENANCY_DB_CONNECTION=tenant_mysql
-TENANCY_DB_HOST=mysql
-TENANCY_DB_PORT=3306
-TENANCY_DB_USERNAME=sail
-TENANCY_DB_PASSWORD=password
+TENANCY_DB_CONNECTION=tenant_sqlite
+TENANCY_DB_DATABASE=:memory:
