[fix] storage配下を.gitignoreに追加し、アップロードファイルが誤ってステージングされないようにする
## 変更点
- .gitignore に  を追加（tenant FSやattachmentsを含むストレージ配下を一括除外）
- 併せて  でプレースホルダを許可

## 理由
- アップロード済みファイルがGitに誤ってステージ・コミットされるのを防止するため。特にtenantごとのpublicストレージ配下（attachments等）は生成物であり、バージョン管理対象外。

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@
 /public/hot
 /public/storage
 /storage/*.key
+# Ignore all generated/storage files (tenant FS, attachments, caches, etc.)
+/storage/**
+!/storage/.gitignore
 /vendor
 .env
 .env.backup
@@ -20,4 +23,3 @@ yarn-error.log
 /.vscode
 my.cnf
 !database/migrations/*.php
-
