[add] FullCalendarの依存関係を追加
- @fullcalendar/vue3: Vue3用のFullCalendarラッパー
- @fullcalendar/core: FullCalendarのコアライブラリ
- @fullcalendar/daygrid: 月間ビュー用プラグイン
- @fullcalendar/timegrid: 週間・日間ビュー用プラグイン
- @fullcalendar/interaction: ドラッグ&ドロップ等のインタラクション機能

--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
         "vue": "^3.4.0"
     },
     "dependencies": {
+        "@fullcalendar/core": "^6.1.19",
+        "@fullcalendar/daygrid": "^6.1.19",
+        "@fullcalendar/interaction": "^6.1.19",
+        "@fullcalendar/timegrid": "^6.1.19",
+        "@fullcalendar/vue3": "^6.1.19",
         "bootstrap-icons": "^1.11.3",
         "dayjs": "^1.11.13",
         "vue-i18n": "^9.14.0",
