--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     "require-dev": {
         "askdkc/breezejp": "^2.3",
         "barryvdh/laravel-debugbar": "^3.13",
+        "cweagans/composer-patches": "^2.0",
         "fakerphp/faker": "^1.23",
         "laravel/breeze": "^2.1",
         "laravel/pint": "^1.13",
@@ -56,6 +57,11 @@
         ]
     },
     "extra": {
+        "patches": {
+            "stancl/tenancy": {
+                "Fix PHP 8.3 static trait property access warnings": "patches/stancl-tenancy-fix-php83.patch"
+            }
+        },
         "laravel": {
             "dont-discover": []
         }
@@ -66,7 +72,8 @@
         "sort-packages": true,
         "allow-plugins": {
             "pestphp/pest-plugin": true,
-            "php-http/discovery": true
+            "php-http/discovery": true,
+            "cweagans/composer-patches": true
         }
     },
     "minimum-stability": "stable",
