--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "clean": "rm -rf node_modules/.vite"
     },
     "devDependencies": {
         "@inertiajs/vue3": "^2.0.4",
