--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "scripts": {
         "dev": "vite",
         "build": "vite build",
-        "clean": "rm -rf node_modules/.vite"
+        "clean": "rimraf node_modules/.vite"
     },
     "devDependencies": {
         "@inertiajs/vue3": "^2.0.4",
@@ -14,6 +14,7 @@
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.31",
+        "rimraf": "^6.1.2",
         "tailwindcss": "^3.2.1",
         "vite": "^5.0",
         "vue": "^3.4.0"
