--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
             XDEBUG_CONFIG: "${SAIL_XDEBUG_CONFIG:-client_host=host.docker.internal}"
             IGNITION_LOCAL_SITES_PATH: "${PWD}"
         volumes:
-            - ".:/var/www/html"
+            - "./src:/var/www/html"
         networks:
             - sail
         depends_on:
@@ -72,7 +72,7 @@ services:
     meilisearch:
         image: "getmeili/meilisearch:latest"
         ports:
-            - "${FORWARD_MEILISEARCH_PORT:-7700}:7700"
+            - "${FORWARD_MEILISEARCH_PORT:-7701}:7700"
         environment:
             MEILI_NO_ANALYTICS: "${MEILISEARCH_NO_ANALYTICS:-false}"
         volumes:
